...
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    tools:context="com.nkrause.shipt.MainActivity">

    <TextView
        android:id="@+id/turn_display"
        android:textColor="@color/display_color"
        android:textSize="24sp"
        android:text="@string/x_turn"
        android:layout_gravity="top|center"
        android:layout_margin="40dp"
        android:layout_width="wrap_content"
...
        android:rowCount="3"
        android:background="@color/grid_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/space_0"
            android:layout_marginBottom="4dp"
            android:background="@color/app_background"
            android:layout_width="100dp"
            android:layout_height="100dp"
            />

...
