<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/button_new_game"
        android:title="@string/new_game"
        app:showAsAction="always"
        />
</menu>